# NoSQL_TO_SQL

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
json2csv/: __init__.py  cli.py  converter.py  utils.py
sample_data/: orders.json  products.json  users.json  userss.csv
sample_data/userss_output/: address.csv  orders.csv  preferences.csv  root.csv
tests/: __init__.py  conftest.py  test_converter.py  test_utils.py
