[tool.poetry]
name = "json2csv"
version = "0.1.0"
description = "CLI tool to convert JSON to CSV (NoSQL to SQL-like conversion)"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "json2csv"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[tool.poetry.scripts]
json2csv = "json2csv.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88