[tool.poetry]
name = "json2csv"
version = "0.1.0"
description = "CLI tool to convert JSON (NoSQL) → CSV (SQL)"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1"
pluralizer = "^1.2.0"  # Add this line

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[tool.poetry.scripts]
json2csv = "json2csv.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
